name:                pdp11-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/shnarazk/pdp11-server#readme
license:             GPL-3
license-file:        LICENSE
author:              Shuji Narazaki
maintainer:          narazakilaboratory@gmail.com
copyright:           Shuji Narazaki
category:            network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , read-env-var
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

executable pdp11-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pdp11-server
  default-language:    Haskell2010

test-suite pdp11-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pdp11-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/shnarazk/pdp11-server
